update align issue

--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -1473,7 +1473,7 @@ button.ant-switch {
 
   .details-right {
     width: 50%;
-    padding-left: 25px;
+    padding-left: 15px;
 
     @media screen and (max-width:1400px) {
       padding-left: 15px;
@@ -1624,10 +1624,10 @@ button.ant-switch {
           margin: 10px 0;
           color: @text-color-dark2;
           border-left: 1px solid @success-color;
-          padding-left: 15px;
+          padding-left: 12px;
 
-          @media screen and (max-width:1380px) {
-            padding-left: 12px;
+          @media screen and (max-width:1500px) {
+            padding-left: 10px;
           }
 
           .dark-mode & {
@@ -1663,7 +1663,7 @@ button.ant-switch {
 
           h3 {
             margin-bottom: 0;
-            font-size: 1.1rem;
+            font-size: 1rem;
             font-weight: 600;
             line-height: 1;
             margin-top: 8px;
